--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,8 +15,8 @@ jobs:
           python-version: 3.12
       - name: Install dependencies
         run: |
-          python3 -m venv .env
-          source .env/bin/activate
+          # python3 -m venv .env
+          # source .env/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run tests with pytest
