--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,4 +20,6 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run tests with pytest
-        run: pytest
+        run: |
+            export PYTHONPATH=$(pwd)
+            pytest __tests__/
