--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
 
+env:
+  AWS_REGION: ap-southeast-1
+
 jobs:
   pre-deploy:
     runs-on: ubuntu-latest
@@ -47,3 +50,20 @@ jobs:
         run: |
             export PYTHONPATH=$(pwd)
             pytest __tests__/*
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: code-unit-testing
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Run installation of dependencies commands
+        run: npm install
+      - name: Deploy serverless
+        uses: serverless/github-action@v3
+        with:
+          args: deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ env.AWS_REGION }}
