--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Example of a Python Flask API service with traditional Serverless Framework",
   "author": "",
   "devDependencies": {
+    "serverless-offline": "^13.8.0",
     "serverless-python-requirements": "^6.1.1",
     "serverless-wsgi": "^3.0.4"
   }
