--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,6 +58,12 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+      - name: Install dependencies
+        run: |
+          # python3 -m venv .env
+          # source .env/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Run installation of dependencies commands
         run: npm install
       - name: Deploy serverless
